--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-attachment: fixed, fixed;
-	background-image: url("img/stardust.png");
+	background-image: url('../img/stardust.png');
     background-color: #f4f4f4;
     color: #f8f8f8;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
