--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ p {
     margin: 0 0 10px
 }
 a {
-    color: #3399FF;
+    color: #4099FF;
     text-decoration: none;
     transition: color .15s
 }
@@ -84,6 +84,20 @@ there's a rowspan on the first cell. Case added to the tests. issue#432 */
     color: rgb(60, 60, 60);
     vertical-align: bottom;
 }
+.popover {
+    border: 1px solid black;
+  }
+.popover-title {
+    background-color: #f8f8f8; 
+    color: rgb(60, 60, 60); 
+    font-size: 28px;
+    text-align:center;
+}
+.popover-content {
+    background-color: #f8f8f8;
+    color: rgb(60, 60, 60);
+    padding: 25px;
+}
 .jumbotron {
     margin: 0px 0;
     text-align: center;
@@ -131,7 +145,6 @@ there's a rowspan on the first cell. Case added to the tests. issue#432 */
     transition: color .10s;
 }
 .btn:hover,
-
 .btn.drop {
     background: rgba(200, 200, 200, 0.5);
     text-decoration: none;
@@ -161,6 +174,7 @@ nav a {
     color: #f8f8f8;
     list-style: none;
     margin: 0;
+    margin-bottom: 75px;
     padding: 0;
     text-align: center
 }
