--- a/css/style.css
+++ b/css/style.css
@@ -31,16 +31,26 @@ a:focus,
 a:active {
     color: #2f2f2f
 }
+textarea {
+    margin: 0px;
+    height: 85px;
+    width: 400px;
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    resize: none;
+    overflow: auto;
+}
 div.centered {
     text-align: center;
 }
 
 div.centered table {
-    margin: 0 auto; 
+    margin: 0 auto;
     text-align: left;
 }
 .table-space {
-    margin-bottom: 25px;
+    margin-bottom: 0px;
 }
 .pure-table {
     /* Remove spacing between table cells (from Normalize.css) */
@@ -85,11 +95,11 @@ there's a rowspan on the first cell. Case added to the tests. issue#432 */
     vertical-align: bottom;
 }
 .popover {
-    border: 1px solid black;
+    border: 1px solid #0E0E0E;
   }
 .popover-title {
-    background-color: #f8f8f8; 
-    color: rgb(60, 60, 60); 
+    background-color: #f8f8f8;
+    color: rgb(60, 60, 60);
     font-size: 28px;
     text-align:center;
 }
@@ -196,20 +206,26 @@ nav>ul>li:last-child:after {
 
 @media only screen and (max-device-width: 320px),
 only screen and (max-width: 400px) {
+    textarea {
+        font-size: 18px;
+        margin: 0px;
+        height: 85px;
+        width: 80%;
+    }
     .jumbotron {
-        margin: 0px 0px 20px 0px
+        margin: 0px 0px 20px 0px;
     }
     .jumbotron .lead {
-        font-size: 18px
+        font-size: 18px;
     }
     .jumbotron img {
-        max-width: 320px
+        max-width: 320px;
     }
     .alert {
-        font-size: 13px
+        font-size: 13px;
     }
     .alert-error {
-        background-color: rgba(248, 223, 223, 0.75)
+        background-color: rgba(248, 223, 223, 0.75);
     }
     nav {
         background-color: rgba(248, 223, 223, 0);
@@ -221,5 +237,5 @@ only screen and (max-width: 400px) {
     nav a {
         padding: 15px 5px 0px 5px;
     }
-    
+
 }
