Fixed a lot of bugs and styled the website a little

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ a:active {
     color: #2f2f2f
 }
 textarea {
-    margin: 0px;
+    margin-bottom: 25px;
     height: 85px;
     width: 400px;
     text-align: center;
@@ -50,7 +50,7 @@ div.centered table {
     text-align: left;
 }
 .table-space {
-    margin-bottom: 0px;
+    /*margin-bottom: 0px;*/
 }
 .pure-table {
     /* Remove spacing between table cells (from Normalize.css) */
@@ -61,6 +61,11 @@ div.centered table {
     border-spacing: 0;
     empty-cells: show;
     border: 1px solid #cbcbcb;
+}
+.pure-table thead {
+    background-color: #f8f8f8;
+    color: rgb(60, 60, 60);
+    vertical-align: bottom;
 }
 .pure-table td,
 .pure-table th {
@@ -82,17 +87,15 @@ div.centered table {
 }
 .rspan{
     background-color: rgba(0, 0, 0, .3);
+    border: 1px solid #cbcbcb;
+    border-width: 0 0 0 1px;
+    margin: 0;
 }
 /* Consider removing this next declaration block, as it causes problems when
 there's a rowspan on the first cell. Case added to the tests. issue#432 */
 .pure-table td:first-child,
 .pure-table th:first-child {
     border-left-width: 0;
-}
-.pure-table thead {
-    background-color: #f8f8f8;
-    color: rgb(60, 60, 60);
-    vertical-align: bottom;
 }
 .popover {
     border: 1px solid #0E0E0E;
@@ -144,13 +147,13 @@ there's a rowspan on the first cell. Case added to the tests. issue#432 */
 .btn {
     background: none;
     border: 3px solid rgba(255, 255, 255, 0.35);
-    border-radius: 2px;
+    border-radius: 4px;
     color: #f4f4f4;
     cursor: pointer;
     display: inline-block;
     font-size: 24px;
-    padding: 28px 48px;
-	margin-bottom: 25px;
+    padding: 20px 20px;
+	margin: 0 10px 25px 10px;
     transition: background .25s, width .5s, height .5s;
     transition: color .10s;
 }
@@ -167,6 +170,7 @@ there's a rowspan on the first cell. Case added to the tests. issue#432 */
     margin-bottom: 20px;
     padding: 8px 14px;
     text-shadow: 0 1px rgba(255, 255, 255, .5);
+    text-align: left;
     transition: width .5s, margin .5s, padding .5s, background-color .5s
 }
 .alert-error {
@@ -203,12 +207,14 @@ nav>ul>li:last-child:after {
     content: "";
     margin: 0
 }
-
+section {
+    margin-bottom: 40px;
+}
 @media only screen and (max-device-width: 320px),
 only screen and (max-width: 400px) {
     textarea {
         font-size: 18px;
-        margin: 0px;
+        margin-bottom: 25px;
         height: 85px;
         width: 80%;
     }
