--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ textarea {
     height: 85px;
     width: 400px;
     text-align: center;
+    border-radius: 4px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     resize: none;
