--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ textarea {
     margin-bottom: 25px;
     height: 85px;
     width: 500px;
+    border-radius: 3px;
     text-align: center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
