Changed the link color

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ p {
     margin: 0 0 10px
 }
 a {
-    color: #4099FF;
+    color: #4895F4;
     text-decoration: none;
     transition: color .15s;
 }
