--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,8 @@ there's a rowspan on the first cell. Case added to the tests. issue#432 */
 .jumbotron .lead {
     font-size: 21px;
     font-weight: 200;
-    line-height: 30px;
+    line-height: 20px;
+    height: 20px;
     margin-bottom: 40px;
     transition: font-size .5s
 }
